The java 17 way : sealed interface + pattern matching