@@ -2,8 +2,19 @@
 
 tasks.withType(PublishToMavenRepository).configureEach { it.enabled = false }
 
-dependencies {
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+dependencies {
     implementation project(':commons-events')
     implementation project(':thoth-core')
     implementation project(':thoth-core-reactor')
