@@ -2,6 +2,18 @@
 
 tasks.withType(PublishToMavenRepository).configureEach { it.enabled = false }
 
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 dependencies {
 
     implementation project(':commons-events')
